# aws_crt

./: .gitignore  .gitmodules  .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  aws_crt.gemspec  aws_crt_s3_client.gemspec
benchmarks/: cbor.rb  cbor_profile.rb  checksums.rb  http.rb  http_dynamodb.rb  http_dynamodb_concurrent.rb  http_s3.rb  http_s3_concurrent.rb  http_s3_tm_concurrent.rb  s3.rb
crt/: CMakeLists.txt
ext/: crt_compile.rb
ext/aws_crt/: Cargo.toml  build.rs  extconf.rb
ext/aws_crt/src/: cbor.rs  connection_manager.rs  credentials.rs  error.rs  http.rs  lib.rs  pool.rs  proxy.rs  runtime.rs  s3_client.rs  s3_request.rs  s3_ruby.rs  signing.rs  tls.rs
ext/aws_crt_s3_client/: Cargo.toml  extconf.rb
ext/aws_crt_s3_client/src/: lib.rs
lib/: aws_crt.rb  aws_crt_s3_client.rb
lib/aws_crt/: http.rb  s3.rb  version.rb
lib/aws_crt/http/: connection_pool.rb  connection_pool_manager.rb  errors.rb  handler.rb  patcher.rb  plugin.rb
lib/aws_crt/s3/: client.rb  credentials.rb  errors.rb  response.rb
lib/aws_crt_s3_client/: version.rb
sig/: aws_crt.rbs  aws_crt_s3_client.rbs
spec/: aws_crt_s3_client_spec.rb  aws_crt_spec.rb  checksums_spec.rb  spec_helper.rb
spec/cbor/: decoder_spec.rb  encoder_spec.rb  module_functions_spec.rb
spec/http/: connection_pool_manager_spec.rb  connection_pool_spec.rb  errors_spec.rb  handler_spec.rb  patcher_spec.rb
spec/http/integration/: basic_request_spec.rb  streaming_spec.rb  timeout_spec.rb  tls_spec.rb
spec/http/properties/: config_passthrough_spec.rb  crt_runtime_idempotence_spec.rb  error_translation_spec.rb  header_merging_spec.rb  logging_spec.rb  pool_affinity_spec.rb  round_trip_spec.rb  streaming_spec.rb  thread_safety_spec.rb
spec/s3/: client_spec.rb  credentials_spec.rb  errors_spec.rb  response_spec.rb
spec/s3/integration/: checksum_spec.rb  error_handling_spec.rb  get_object_spec.rb  progress_spec.rb  put_object_spec.rb
spec/s3/properties/: checksum_config_spec.rb  client_config_spec.rb  request_headers_spec.rb  response_round_trip_spec.rb  service_error_spec.rb
spec/support/: test_server.rb  test_server_spec.rb
